--- a/CSharpEgitimKampi301.PresentationLayer/App.config
+++ b/CSharpEgitimKampi301.PresentationLayer/App.config
@@ -13,6 +13,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="KampContext" connectionString="Data Source=(localdb)\\hasan;initial Catalog=EgitimKampi301Db;integrated security" providerName="System.Data.SqlClient"/>
+		<add name="KampContext" connectionString="Data Source=(localdb)\hasan;initial Catalog=EgitimKampi301Db;integrated security=true;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
